Fixed review not showing in listing showpage issue

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,9 +1,10 @@
 .nav-bar {
   box-sizing: border-box;
+  height: 80px;
   min-height: 80px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
   align-items: center;
-  justify-content: space-between;
   position: sticky;
   top: 0;
   padding-left: 40px;
@@ -24,34 +25,30 @@
   border-radius: 15px;
   transition: 0.3s;
 }
-.logo:hover{
+.logo:hover {
   scale: 1.01;
   box-shadow: 0px 2px 6px #e61e4d;
 }
 
-.home-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .header-links {
-  width: 20%;
   font-size: 32px;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 69% 29%;
+  column-gap: 2%;
+  /* justify-content: space-between; */
 }
 
 .personal-links {
-  width: 70px;
+  justify-self: right;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
 .dropdown {
   width: 80px;
   display: flex;
+  justify-self: right;
 }
 
 .dropdown-content {
@@ -72,7 +69,7 @@
   width: 100%;
   height: 100%;
   min-height: 210px;
-  
+
   border-radius: 15px;
   box-shadow: 0px 2px 5px gray;
   border: 1px solid lightgray;
@@ -107,36 +104,37 @@
 }
 
 .line {
-  margin-top:10px;
+  margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
   border-bottom: 1px solid lightgray;
 }
-.user-drop-down .user-info{
-display: flex;
-flex-direction: column;
-word-wrap: break-word;
-overflow-wrap: break-word;
+.user-drop-down .user-info {
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
-.user-info{
+.user-info {
   margin-top: 15px;
   padding-left: 15px;
   padding-right: 15px;
   box-sizing: border-box;
 }
-p.user-name, p.user-email {
+p.user-name,
+p.user-email {
   overflow-wrap: break-word;
 }
 
-.user-name, .user-email {
-padding-top: 10px;
+.user-name,
+.user-email {
+  padding-top: 10px;
 }
 
-.user-drop-down h2{
+.user-drop-down h2 {
   padding-top: 5px;
   padding-bottom: 5px;
-
 }
 
 .user-drop-down button {
@@ -155,7 +153,8 @@ padding-top: 10px;
   box-shadow: 0px 0px 5px lightgray;
 }
 
-.log-btn, .trips-btn {
+.log-btn,
+.trips-btn {
   font-family: Cereal-bd;
 }
 
@@ -175,7 +174,10 @@ padding-top: 10px;
   font-size: 30px;
 }
 
-.fa-linkedin:hover,
-.fa-square-github:hover {
+.fa-brands{
+  margin-right: 5px;
+}
+
+.fa-brands:hover {
   scale: 1.1;
 }
